Adjust homepage panels and add special streams section

--- a/gamelist.yaml
+++ b/gamelist.yaml
@@ -1261,6 +1261,25 @@ retrospectives:
     - title: "Looney Tunes"
       playlist: "PL6RaiovQ8kYuB5uqmy29UpV-Bs1BwWE0e"
       video: "4v1RrrdyYE4"
+specialStreams:
+    - title: "Save&Raid: Follow The Freeman"
+      playlist: "PL6RaiovQ8kYuArUMx-5-AT02jTBXmDSIQ"
+      video: "2bZN1hDLfe4"
+    - title: "Birthday Stream 2024"
+      playlist: "PL6RaiovQ8kYuArUMx-5-AT02jTBXmDSIQ"
+      video: "Jnt3t4CzCS4"
+    - title: "Fighting Games Stream"
+      playlist: "PL6RaiovQ8kYuArUMx-5-AT02jTBXmDSIQ"
+      video: "ikmDVkIWymI"
+    - title: "Save&Raid: Sanctuary"
+      playlist: "PL6RaiovQ8kYuArUMx-5-AT02jTBXmDSIQ"
+      video: "m9G53QVF0Zo"
+    - title: "Birthday Stream 2025"
+      playlist: "PL6RaiovQ8kYuArUMx-5-AT02jTBXmDSIQ"
+      video: "oHdb8Gz30UY"
+    - title: "Coffee Break!"
+      playlist: "PL6RaiovQ8kYuArUMx-5-AT02jTBXmDSIQ"
+      video: "5wP9_rr3-C8"
 droppedCrashing:
     - title: "Robot Commander"
       playlist: "PL6RaiovQ8kYv13D2Qnl9fIfdSJlqUZUvD"
